#7 updated tests report preprending SuiteName before TestName and updated Api documentation on Readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.18)
 project(CloveExample LANGUAGES C)
 
-add_executable(CloveExample example/main.c example/test_suite1.h example/test_suite2.h example/test_suite3.h)
+file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/example/*.c)
+file(GLOB_RECURSE HEADERS ${CMAKE_SOURCE_DIR}/example/*.h)
+
+add_executable(CloveExample ${SOURCES} ${HEADERS} clove.h)
 target_include_directories(CloveExample PRIVATE .)
 set_property(TARGET CloveExample PROPERTY C_STANDARD 11)
