updated readme, removed CLOVE_ENABLE_AUTODISCOVERY. added CLOVE_ENABLE_MANUAL instead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,5 @@ project(CLoveUnit LANGUAGES C)
 
 add_subdirectory(tests)
 add_subdirectory(perfs)
+add_subdirectory(examples/auto)
+add_subdirectory(examples/manual)
