--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(CLoveUnit LANGUAGES C)
 
 add_subdirectory(tests)
 add_subdirectory(perfs)
+add_subdirectory(test_report)
 add_subdirectory(examples/auto)
 add_subdirectory(examples/manual)
