--- a/examples/auto/CMakeLists.txt
+++ b/examples/auto/CMakeLists.txt
@@ -4,6 +4,6 @@ project(CloveAutoExample LANGUAGES C)
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
 
-add_executable(AutoExample ${SOURCES} ${HEADERS} ../../clove.h)
+add_executable(AutoExample ${SOURCES} ${HEADERS} ../../clove-unit.h)
 target_include_directories(AutoExample PRIVATE ../../)
 set_property(TARGET AutoExample PROPERTY C_STANDARD 11)
