--- a/examples/manual/CMakeLists.txt
+++ b/examples/manual/CMakeLists.txt
@@ -4,6 +4,6 @@ project(CloveManualExample LANGUAGES C)
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
 
-add_executable(ManualExample ${SOURCES} ${HEADERS} ../../clove.h)
+add_executable(ManualExample ${SOURCES} ${HEADERS} ../../clove-unit.h)
 target_include_directories(ManualExample PRIVATE ../../)
 set_property(TARGET ManualExample PROPERTY C_STANDARD 11)
