--- a/test_report/CMakeLists.txt
+++ b/test_report/CMakeLists.txt
@@ -3,6 +3,6 @@
 
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 
-add_executable(CLoveReportTest ${SOURCES} ../clove.h)
+add_executable(CLoveReportTest ${SOURCES} ../clove-unit.h)
 target_include_directories(CLoveReportTest PRIVATE ../)
 set_property(TARGET CLoveReportTest PROPERTY C_STANDARD 11)
