#22 remove manual example and refactored the auto one. Updated screen-shoot

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,4 @@ project(CLoveUnit LANGUAGES C)
 add_subdirectory(tests)
 add_subdirectory(perfs)
 add_subdirectory(test_report)
-add_subdirectory(examples/auto)
-add_subdirectory(examples/manual)
+add_subdirectory(examples/clove101)
