reorganized test projecet and added ctest configuration for cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.18)
 project(CLoveUnit LANGUAGES C)
+include(CTest)
 
 add_subdirectory(tests)
 add_subdirectory(perfs)
-add_subdirectory(test_report)
 add_subdirectory(examples/clove101)
+
+
+enable_testing()
+add_test(NAME CLoveUnitTest COMMAND CLoveUnitTest)
