--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,6 @@
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 #file(GLOB_RECURSE HEADERS ${CMAKE_SOURCE_DIR}/src/*.h)
 
-add_executable(CLoveUnitTest ${SOURCES} ${HEADERS} ../clove-unit.h)
+add_executable(CLoveUnitTest ${SOURCES} ../clove-unit.h)
 target_include_directories(CLoveUnitTest PRIVATE ../)
 set_property(TARGET CLoveUnitTest PROPERTY C_STANDARD 11)
