--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,10 +2,10 @@
 #project(CLoveUnit LANGUAGES C)
 
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
-#file(GLOB_RECURSE HEADERS ${CMAKE_SOURCE_DIR}/src/*.h)
+file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
 
-add_executable(CLoveUnitTest ${SOURCES} ../clove-unit.h)
-target_include_directories(CLoveUnitTest PRIVATE ../)
+add_executable(CLoveUnitTest ${SOURCES} ${HEADERS} ../clove-unit.h)
+target_include_directories(CLoveUnitTest PRIVATE ../ ./src/)
 set_property(TARGET CLoveUnitTest PROPERTY C_STANDARD 11)
 
 add_subdirectory(resources/prj01)
