#73 improve ci and cmake build in order to fail in case of compiler warnings

--- a/.github/workflows/ci_action.yml
+++ b/.github/workflows/ci_action.yml
@@ -13,6 +13,7 @@ jobs:
       name: Build Job
       runs-on: ${{ matrix.os }}
       strategy:
+        fail-fast: false
         matrix:
           os: [macos-latest, ubuntu-latest, windows-latest]
           include:
