--- a/tests/functs/resources/prj01/CMakeLists.txt
+++ b/tests/functs/resources/prj01/CMakeLists.txt
@@ -4,8 +4,8 @@
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 #file(GLOB_RECURSE HEADERS ${CMAKE_SOURCE_DIR}/src/*.h)
 
-add_executable(CLoveUnitResourcePrj01 ${SOURCES} ../../../clove-unit.h)
-target_include_directories(CLoveUnitResourcePrj01 PRIVATE ../../../)
+add_executable(CLoveUnitResourcePrj01 ${SOURCES} ../../../../clove-unit.h)
+target_include_directories(CLoveUnitResourcePrj01 PRIVATE ../../../../)
 set_property(TARGET CLoveUnitResourcePrj01 PROPERTY C_STANDARD 11)
 
 #[[
