--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ project(CLoveUnit LANGUAGES C)
 include(CTest)
 
 add_subdirectory(tests/functs)
-add_subdirectory(tests/stricts/clove-c)
-add_subdirectory(tests/stricts/clove-cpp)
-add_subdirectory(examples/clove101)
-add_subdirectory(examples/clovepp)
+if (DEFINED CLOVE_CMAKE__CI_TRIGGERED)
+    add_subdirectory(tests/stricts/clove-c)
+    add_subdirectory(tests/stricts/clove-cpp)
+    add_subdirectory(examples/clove101)
+    add_subdirectory(examples/clovepp)
+endif()
 
-if (NOT DEFINED CI_TRIGGERED)
+if (DEFINED CLOVE_CMAKE__ENABLE_PERFS)
     add_subdirectory(tests/perfs)
 endif()
