--- a/.github/workflows/ci_action.yml
+++ b/.github/workflows/ci_action.yml
@@ -81,7 +81,7 @@ jobs:
             echo "== CMAKE VERSION =="
             cmake --version
             echo "== CMAKE CONFIGURE =="
-            cmake -B${{env.BUILD_DIR}} -DCI_TRIGGERED=1
+            cmake -B${{env.BUILD_DIR}} -DCI_TRIGGERED=1 -DCLOVE_CMAKE__CPP_STRICT_WARN_AS_ERROR=${{matrix.compiler.strict}}
             echo "== CMAKE BUILD =="
             cmake --build ${{env.BUILD_DIR}} --config Release
         - name: List Build
