#76 add more sanity checks

--- a/tests/stricts/clove-sanity/CMakeLists.txt
+++ b/tests/stricts/clove-sanity/CMakeLists.txt
@@ -17,4 +17,15 @@ else() # GCC and CLANG
     target_link_options(StrictCloveSanity PRIVATE -fsanitize=address,leak,undefined)
 endif()
 
-add_test(NAME StrictCloveSanity COMMAND StrictCloveSanity)
+add_test(NAME Sanity_uc_default COMMAND StrictCloveSanity)
+add_test(NAME Sanity_uc_help COMMAND StrictCloveSanity -h)
+add_test(NAME Sanity_uc_version COMMAND StrictCloveSanity -v)
+add_test(NAME Sanity_uc_include COMMAND StrictCloveSanity -i *.SimpleTest01)
+add_test(NAME Sanity_uc_exclude COMMAND StrictCloveSanity -e *.SimpleTest01)
+add_test(NAME Sanity_uc_pretty COMMAND StrictCloveSanity -r pretty)
+add_test(NAME Sanity_uc_csv COMMAND StrictCloveSanity -r csv)
+add_test(NAME Sanity_uc_json COMMAND StrictCloveSanity -r json)
+add_test(NAME Sanity_uc_list COMMAND StrictCloveSanity -l)
+add_test(NAME Sanity_uc_list_pretty COMMAND StrictCloveSanity -l -r pretty)
+add_test(NAME Sanity_uc_list_csv COMMAND StrictCloveSanity -l -r csv)
+add_test(NAME Sanity_uc_list_json COMMAND StrictCloveSanity -l -r json)
