#3 make basepath options working with run-test and list-tests and all report (pretty, json, csv)

--- a/tests/functs/CMakeLists.txt
+++ b/tests/functs/CMakeLists.txt
@@ -19,6 +19,8 @@ if(MSVC)
 
     set(RES_PRJ01_EXEC_PATH \"${CMAKE_CURRENT_BINARY_DIR}/resources/prj01/${CMAKE_BUILD_TYPE_INIT}/CLoveUnitResourcePrj01.exe\")
     set(RES_PRJ01_TEST_PATH \"${CMAKE_CURRENT_SOURCE_DIR}/resources/prj01\")
+    set(RES_PRJ01_TEST_PATH_UNIX ${RES_PRJ01_TEST_PATH})
+    to_win_path_escaped(RES_PRJ01_EXEC_PATH)
     to_win_path_escaped(RES_PRJ01_TEST_PATH)
     #cmake_path(SET RES_PRJ01_TEST_PATH \"${CMAKE_CURRENT_SOURCE_DIR}/resources/prj01\")
     #cmake_path(NATIVE_PATH RES_PRJ01_TEST_PATH RES_PRJ01_TEST_PATH)
@@ -26,9 +28,11 @@ if(MSVC)
 else()
     set(RES_PRJ01_EXEC_PATH \"${CMAKE_CURRENT_BINARY_DIR}/resources/prj01/CLoveUnitResourcePrj01\")
     set(RES_PRJ01_TEST_PATH \"${CMAKE_CURRENT_SOURCE_DIR}/resources/prj01\")
+    set(RES_PRJ01_TEST_PATH_UNIX ${RES_PRJ01_TEST_PATH})
 endif()
 add_compile_definitions(RES_PRJ01_EXEC_PATH=${RES_PRJ01_EXEC_PATH})
 add_compile_definitions(RES_PRJ01_TEST_PATH=${RES_PRJ01_TEST_PATH})
+add_compile_definitions(RES_PRJ01_TEST_PATH_UNIX=${RES_PRJ01_TEST_PATH_UNIX})
 
 # Compiler Options
 #[[
