#3 add basepath option to help command and updated readme

--- a/.github/workflows/ci_action.yml
+++ b/.github/workflows/ci_action.yml
@@ -5,6 +5,9 @@ on:
       branches: 
         - '**'
         - '!master'
+      paths-ignore: 
+        - '**/*.md'
+        - '**/*.png'
   pull_request:
       branches:
         - '**'
