#102 fix github ci regression on ubuntu 22.04 where has been removed gcc-13

--- a/.github/workflows/ci_action.yml
+++ b/.github/workflows/ci_action.yml
@@ -73,7 +73,7 @@ jobs:
           cd ${{ github.workspace }}
   build_ubuntu:
       name: Build ubuntu_${{matrix.compiler.c}}-${{matrix.compiler.v}}
-      runs-on: ubuntu-latest
+      runs-on: ubuntu-22.04
       strategy:
         fail-fast: false
         matrix:
@@ -102,14 +102,24 @@ jobs:
           with:
             version: "${{ matrix.compiler.v }}"
             env: true  # set CC / CXX variable
+        - name: Install GCC (if needed)
+          # Installing GCC-13 due to regression introduced in ubuntu 22.04 image
+          # https://github.com/actions/runner-images/issues/9866
+          if: ${{ matrix.compiler.c == 'gcc' && matrix.compiler.v == 13 }} 
+          run: |
+            sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+            sudo apt-get update -y
+            sudo apt-get install gcc-13
+            sudo apt-get install g++-13
         - name: Set Compiler # only if CC / CXX are not already set from new installation
           run: |
             if [ -z "${CC}" ]; then
               echo "CC=${{matrix.compiler.c}}-${{matrix.compiler.v}}" >> "$GITHUB_ENV"
               echo "CXX=${{matrix.compiler.cpp}}-${{matrix.compiler.v}}" >> "$GITHUB_ENV"
+            else
+              echo CC=$CC
+              echo CXX=$CXX
             fi
-            echo CC=$CC
-            echo CXX=$CXX
         - name: Compile
           run: |
             echo "== CMAKE VERSION =="
