#104 add guard to avoid including dev targets when using FetchContent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,18 +19,26 @@ add_subdirectory(tests/perfs)
 endif()
 ]]
 
-if (CLOVE_CMAKE__UC_BUILD)
-  add_subdirectory(tests/functs)
-  add_subdirectory(tests/stricts/clove-c)
-  add_subdirectory(tests/stricts/clove-cpp)
-  add_subdirectory(examples/clove101)
-  add_subdirectory(examples/clovepp)
-endif()
+#[[ 
+  In case this is the root project add dev targets.
+  To avoid targets pollution when using FetchContent were only the target library is required
+]] 
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
 
-if (CLOVE_CMAKE__UC_SANITY)
-  add_subdirectory(tests/stricts/clove-sanity)
-endif()
+  if (CLOVE_CMAKE__UC_BUILD)
+    add_subdirectory(tests/functs)
+    add_subdirectory(tests/stricts/clove-c)
+    add_subdirectory(tests/stricts/clove-cpp)
+    add_subdirectory(examples/clove101)
+    add_subdirectory(examples/clovepp)
+  endif()
 
-if (CLOVE_CMAKE__UC_PERFS)
-  add_subdirectory(tests/perfs)
+  if (CLOVE_CMAKE__UC_SANITY)
+    add_subdirectory(tests/stricts/clove-sanity)
+  endif()
+
+  if (CLOVE_CMAKE__UC_PERFS)
+    add_subdirectory(tests/perfs)
+  endif()
+
 endif()
