--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ endif()
 ]]
 
 #[[ 
-  In case this is the root project add dev targets.
+  In case this is the root project add dev targets (Development mode).
   To avoid targets pollution when using FetchContent were only the target library is required
 ]] 
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
