--- a/tests/stricts/clove-cpp/CMakeLists.txt
+++ b/tests/stricts/clove-cpp/CMakeLists.txt
@@ -7,7 +7,7 @@ target_include_directories(StrictCloveCpp PRIVATE ../../../)
 
 set_property(TARGET StrictCloveCpp PROPERTY CXX_STANDARD 11)
 
-if (NOT DEFINED CLOVE_CMAKE__CPP_STRICT_WARN_AS_ERROR OR CLOVE_CMAKE__CPP_STRICT_WARN_AS_ERROR EQUAL TRUE)
+if (CLOVE_CMAKE__CPP_STRICT_WARN_AS_ERROR)
     set_property(TARGET StrictCloveCpp PROPERTY COMPILE_WARNING_AS_ERROR ON)
 endif()
 
