--- a/tests/stricts/clove-cpp/CMakeLists.txt
+++ b/tests/stricts/clove-cpp/CMakeLists.txt
@@ -13,7 +13,7 @@ endif()
 
 # Compiler Options
 if (MSVC)
-    target_compile_options(StrictCloveCpp PRIVATE /W4)
+    target_compile_options(StrictCloveCpp PRIVATE /W4 /analyze)
 else() # GCC and CLANG
     target_compile_options(StrictCloveCpp PRIVATE -Wall -Wextra -Wpedantic)
 endif()
